Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28275

Hashicorp: ASAN heap-use-after-free in my_mb_wc_utf8mb4_quick / get_version

    XMLWordPrintable

Details

    Description

      preview-10.9-MDEV-20119-misc e62a2a0615

      perl ./mtr vault.hashicorp_encode
       
      ==1425892==ERROR: AddressSanitizer: heap-use-after-free on address 0x6130000411ef at pc 0x56014d7a1564 bp 0x7f81228f5d30 sp 0x7f81228f5d28
      READ of size 1 at 0x6130000411ef thread T13
          #0 0x56014d7a1563 in my_mb_wc_utf8mb4_quick /data/src/preview-10.9-misc-asan/strings/ctype-utf8.h:145
          #1 0x56014d7a1563 in my_mb_wc_utf8mb4 /data/src/preview-10.9-misc-asan/strings/ctype-utf8.c:7535
          #2 0x56014d7d5c4a in get_first_nonspace /data/src/preview-10.9-misc-asan/strings/json_lib.c:702
          #3 0x56014d7d7ea2 in json_read_value /data/src/preview-10.9-misc-asan/strings/json_lib.c:963
          #4 0x56014d7dc7d7 in json_get_object_key /data/src/preview-10.9-misc-asan/strings/json_lib.c:1991
          #5 0x7f812b5d84b1 in get_version /data/src/preview-10.9-misc-asan/plugin/hashicorp_key_management/hashicorp_key_management_plugin.cc:630
          #6 0x7f812b5dba6d in get_latest_version /data/src/preview-10.9-misc-asan/plugin/hashicorp_key_management/hashicorp_key_management_plugin.cc:735
          #7 0x56014cfd5b39 in encryption_key_id_exists /data/src/preview-10.9-misc-asan/include/mysql/service_encryption.h:99
          #8 0x56014cfd5b39 in create_table_info_t::check_table_options() /data/src/preview-10.9-misc-asan/storage/innobase/handler/ha_innodb.cc:11234
          #9 0x56014d02244d in create_table_info_t::prepare_create_table(char const*, bool) /data/src/preview-10.9-misc-asan/storage/innobase/handler/ha_innodb.cc:11979
          #10 0x56014d02244d in ha_innobase::create(char const*, TABLE*, HA_CREATE_INFO*, bool, trx_t*) /data/src/preview-10.9-misc-asan/storage/innobase/handler/ha_innodb.cc:13150
          #11 0x56014c6be812 in handler::ha_create(char const*, TABLE*, HA_CREATE_INFO*) /data/src/preview-10.9-misc-asan/sql/handler.cc:5430
          #12 0x56014c6c0383 in ha_create_table(THD*, char const*, char const*, char const*, HA_CREATE_INFO*, st_mysql_const_unsigned_lex_string*, bool) /data/src/preview-10.9-misc-asan/sql/handler.cc:5896
          #13 0x56014c1abe5d in create_table_impl(THD*, st_ddl_log_state*, st_ddl_log_state*, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, DDL_options_st, HA_CREATE_INFO*, Alter_info*, int, bool*, st_key**, unsigned int*, st_mysql_const_unsigned_lex_string*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:4632
          #14 0x56014c1acd6a in mysql_create_table_no_lock(THD*, st_ddl_log_state*, st_ddl_log_state*, st_mysql_const_lex_string const*, st_mysql_const_lex_string const*, Table_specification_st*, Alter_info*, bool*, int, TABLE_LIST*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:4732
          #15 0x56014c1ad6eb in mysql_create_table(THD*, TABLE_LIST*, Table_specification_st*, Alter_info*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:4844
          #16 0x56014c1bec62 in Sql_cmd_create_table_like::execute(THD*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:12349
          #17 0x56014bf3fd17 in mysql_execute_command(THD*, bool) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:5988
          #18 0x56014bf4ce4a in mysql_parse(THD*, char*, unsigned int, Parser_state*) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:8027
          #19 0x56014bf52484 in dispatch_command(enum_server_command, THD*, char*, unsigned int, bool) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:1894
          #20 0x56014bf57e7d in do_command(THD*, bool) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:1402
          #21 0x56014c31028d in do_handle_one_connection(CONNECT*, bool) /data/src/preview-10.9-misc-asan/sql/sql_connect.cc:1418
          #22 0x56014c3107cc in handle_one_connection /data/src/preview-10.9-misc-asan/sql/sql_connect.cc:1312
          #23 0x56014cde597b in pfs_spawn_thread /data/src/preview-10.9-misc-asan/storage/perfschema/pfs.cc:2201
          #24 0x7f8132fc0ea6 in start_thread nptl/pthread_create.c:477
          #25 0x7f8132bbfdee in __clone (/lib/x86_64-linux-gnu/libc.so.6+0xfddee)
       
      0x6130000411ef is located 111 bytes inside of 344-byte region [0x613000041180,0x6130000412d8)
      freed by thread T13 here:
          #0 0x7f81334c9017 in operator delete(void*) ../../../../src/libsanitizer/asan/asan_new_delete.cpp:160
          #1 0x7f812b5db9f2 in __gnu_cxx::new_allocator<char>::deallocate(char*, unsigned long) /usr/include/c++/10/ext/new_allocator.h:133
          #2 0x7f812b5db9f2 in std::allocator_traits<std::allocator<char> >::deallocate(std::allocator<char>&, char*, unsigned long) /usr/include/c++/10/bits/alloc_traits.h:492
          #3 0x7f812b5db9f2 in std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_destroy(unsigned long) /usr/include/c++/10/bits/basic_string.h:237
          #4 0x7f812b5db9f2 in std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_dispose() /usr/include/c++/10/bits/basic_string.h:232
          #5 0x7f812b5db9f2 in std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::~basic_string() /usr/include/c++/10/bits/basic_string.h:658
          #6 0x7f812b5db9f2 in get_latest_version /data/src/preview-10.9-misc-asan/plugin/hashicorp_key_management/hashicorp_key_management_plugin.cc:730
          #7 0x56014cfd5b39 in encryption_key_id_exists /data/src/preview-10.9-misc-asan/include/mysql/service_encryption.h:99
          #8 0x56014cfd5b39 in create_table_info_t::check_table_options() /data/src/preview-10.9-misc-asan/storage/innobase/handler/ha_innodb.cc:11234
          #9 0x56014d02244d in create_table_info_t::prepare_create_table(char const*, bool) /data/src/preview-10.9-misc-asan/storage/innobase/handler/ha_innodb.cc:11979
          #10 0x56014d02244d in ha_innobase::create(char const*, TABLE*, HA_CREATE_INFO*, bool, trx_t*) /data/src/preview-10.9-misc-asan/storage/innobase/handler/ha_innodb.cc:13150
          #11 0x56014c6be812 in handler::ha_create(char const*, TABLE*, HA_CREATE_INFO*) /data/src/preview-10.9-misc-asan/sql/handler.cc:5430
          #12 0x56014c6c0383 in ha_create_table(THD*, char const*, char const*, char const*, HA_CREATE_INFO*, st_mysql_const_unsigned_lex_string*, bool) /data/src/preview-10.9-misc-asan/sql/handler.cc:5896
          #13 0x56014c1abe5d in create_table_impl(THD*, st_ddl_log_state*, st_ddl_log_state*, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, DDL_options_st, HA_CREATE_INFO*, Alter_info*, int, bool*, st_key**, unsigned int*, st_mysql_const_unsigned_lex_string*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:4632
          #14 0x56014c1acd6a in mysql_create_table_no_lock(THD*, st_ddl_log_state*, st_ddl_log_state*, st_mysql_const_lex_string const*, st_mysql_const_lex_string const*, Table_specification_st*, Alter_info*, bool*, int, TABLE_LIST*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:4732
          #15 0x56014c1ad6eb in mysql_create_table(THD*, TABLE_LIST*, Table_specification_st*, Alter_info*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:4844
          #16 0x56014c1bec62 in Sql_cmd_create_table_like::execute(THD*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:12349
          #17 0x56014bf3fd17 in mysql_execute_command(THD*, bool) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:5988
          #18 0x56014bf4ce4a in mysql_parse(THD*, char*, unsigned int, Parser_state*) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:8027
          #19 0x56014bf52484 in dispatch_command(enum_server_command, THD*, char*, unsigned int, bool) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:1894
          #20 0x56014bf57e7d in do_command(THD*, bool) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:1402
          #21 0x56014c31028d in do_handle_one_connection(CONNECT*, bool) /data/src/preview-10.9-misc-asan/sql/sql_connect.cc:1418
          #22 0x56014c3107cc in handle_one_connection /data/src/preview-10.9-misc-asan/sql/sql_connect.cc:1312
          #23 0x56014cde597b in pfs_spawn_thread /data/src/preview-10.9-misc-asan/storage/perfschema/pfs.cc:2201
          #24 0x7f8132fc0ea6 in start_thread nptl/pthread_create.c:477
       
      previously allocated by thread T13 here:
          #0 0x7f81334c8647 in operator new(unsigned long) ../../../../src/libsanitizer/asan/asan_new_delete.cpp:99
          #1 0x7f812b5d90a8 in void std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_construct<char*>(char*, char*, std::forward_iterator_tag) /usr/include/c++/10/bits/basic_string.tcc:219
          #2 0x7f812b5db95f in void std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_construct_aux<char*>(char*, char*, std::__false_type) /usr/include/c++/10/bits/basic_string.h:247
          #3 0x7f812b5db95f in void std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::_M_construct<char*>(char*, char*) /usr/include/c++/10/bits/basic_string.h:266
          #4 0x7f812b5db95f in std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >::basic_string(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&) /usr/include/c++/10/bits/basic_string.h:451
          #5 0x7f812b5db95f in get_latest_version /data/src/preview-10.9-misc-asan/plugin/hashicorp_key_management/hashicorp_key_management_plugin.cc:730
          #6 0x56014cfd5b39 in encryption_key_id_exists /data/src/preview-10.9-misc-asan/include/mysql/service_encryption.h:99
          #7 0x56014cfd5b39 in create_table_info_t::check_table_options() /data/src/preview-10.9-misc-asan/storage/innobase/handler/ha_innodb.cc:11234
          #8 0x56014d02244d in create_table_info_t::prepare_create_table(char const*, bool) /data/src/preview-10.9-misc-asan/storage/innobase/handler/ha_innodb.cc:11979
          #9 0x56014d02244d in ha_innobase::create(char const*, TABLE*, HA_CREATE_INFO*, bool, trx_t*) /data/src/preview-10.9-misc-asan/storage/innobase/handler/ha_innodb.cc:13150
          #10 0x56014c6be812 in handler::ha_create(char const*, TABLE*, HA_CREATE_INFO*) /data/src/preview-10.9-misc-asan/sql/handler.cc:5430
          #11 0x56014c6c0383 in ha_create_table(THD*, char const*, char const*, char const*, HA_CREATE_INFO*, st_mysql_const_unsigned_lex_string*, bool) /data/src/preview-10.9-misc-asan/sql/handler.cc:5896
          #12 0x56014c1abe5d in create_table_impl(THD*, st_ddl_log_state*, st_ddl_log_state*, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, DDL_options_st, HA_CREATE_INFO*, Alter_info*, int, bool*, st_key**, unsigned int*, st_mysql_const_unsigned_lex_string*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:4632
          #13 0x56014c1acd6a in mysql_create_table_no_lock(THD*, st_ddl_log_state*, st_ddl_log_state*, st_mysql_const_lex_string const*, st_mysql_const_lex_string const*, Table_specification_st*, Alter_info*, bool*, int, TABLE_LIST*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:4732
          #14 0x56014c1ad6eb in mysql_create_table(THD*, TABLE_LIST*, Table_specification_st*, Alter_info*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:4844
          #15 0x56014c1bec62 in Sql_cmd_create_table_like::execute(THD*) /data/src/preview-10.9-misc-asan/sql/sql_table.cc:12349
          #16 0x56014bf3fd17 in mysql_execute_command(THD*, bool) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:5988
          #17 0x56014bf4ce4a in mysql_parse(THD*, char*, unsigned int, Parser_state*) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:8027
          #18 0x56014bf52484 in dispatch_command(enum_server_command, THD*, char*, unsigned int, bool) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:1894
          #19 0x56014bf57e7d in do_command(THD*, bool) /data/src/preview-10.9-misc-asan/sql/sql_parse.cc:1402
          #20 0x56014c31028d in do_handle_one_connection(CONNECT*, bool) /data/src/preview-10.9-misc-asan/sql/sql_connect.cc:1418
          #21 0x56014c3107cc in handle_one_connection /data/src/preview-10.9-misc-asan/sql/sql_connect.cc:1312
          #22 0x56014cde597b in pfs_spawn_thread /data/src/preview-10.9-misc-asan/storage/perfschema/pfs.cc:2201
          #23 0x7f8132fc0ea6 in start_thread nptl/pthread_create.c:477
       
      Thread T13 created by T0 here:
          #0 0x7f81334722a2 in __interceptor_pthread_create ../../../../src/libsanitizer/asan/asan_interceptors.cpp:214
          #1 0x56014cde5bf9 in my_thread_create /data/src/preview-10.9-misc-asan/storage/perfschema/my_thread.h:52
          #2 0x56014cde5bf9 in pfs_spawn_thread_v1 /data/src/preview-10.9-misc-asan/storage/perfschema/pfs.cc:2252
          #3 0x56014bc1f78d in inline_mysql_thread_create /data/src/preview-10.9-misc-asan/include/mysql/psi/mysql_thread.h:1139
          #4 0x56014bc1f78d in create_thread_to_handle_connection(CONNECT*) /data/src/preview-10.9-misc-asan/sql/mysqld.cc:5975
          #5 0x56014bc2b547 in handle_accepted_socket(st_mysql_socket, st_mysql_socket) /data/src/preview-10.9-misc-asan/sql/mysqld.cc:6096
          #6 0x56014bc2c0bf in handle_connections_sockets() /data/src/preview-10.9-misc-asan/sql/mysqld.cc:6220
          #7 0x56014bc2d9d5 in mysqld_main(int, char**) /data/src/preview-10.9-misc-asan/sql/mysqld.cc:5870
          #8 0x7f8132ae8d09 in __libc_start_main ../csu/libc-start.c:308
       
      SUMMARY: AddressSanitizer: heap-use-after-free /data/src/preview-10.9-misc-asan/strings/ctype-utf8.h:145 in my_mb_wc_utf8mb4_quick
      Shadow bytes around the buggy address:
        0x0c26800001e0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 fa
        0x0c26800001f0: fa fa fa fa fa fa fa fa 00 00 00 00 00 00 00 00
        0x0c2680000200: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
        0x0c2680000210: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
        0x0c2680000220: 00 00 00 fa fa fa fa fa fa fa fa fa fa fa fa fa
      =>0x0c2680000230: fd fd fd fd fd fd fd fd fd fd fd fd fd[fd]fd fd
        0x0c2680000240: fd fd fd fd fd fd fd fd fd fd fd fd fd fd fd fd
        0x0c2680000250: fd fd fd fd fd fd fd fd fd fd fd fa fa fa fa fa
        0x0c2680000260: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
        0x0c2680000270: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
        0x0c2680000280: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
      Shadow byte legend (one shadow byte represents 8 application bytes):
        Addressable:           00
        Partially addressable: 01 02 03 04 05 06 07 
        Heap left redzone:       fa
        Freed heap region:       fd
        Stack left redzone:      f1
        Stack mid redzone:       f2
        Stack right redzone:     f3
        Stack after return:      f5
        Stack use after scope:   f8
        Global redzone:          f9
        Global init order:       f6
        Poisoned by user:        f7
        Container overflow:      fc
        Array cookie:            ac
        Intra object redzone:    bb
        ASan internal:           fe
        Left alloca redzone:     ca
        Right alloca redzone:    cb
        Shadow gap:              cc
      ==1425892==ABORTING
      220410 17:13:21 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.9.0-MariaDB-log
      key_buffer_size=1048576
      read_buffer_size=131072
      max_used_connections=1
      max_threads=153
      thread_count=1
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 63771 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x62b00017a218
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f81228fb990 thread_stack 0x5fc00
      sanitizer_common/sanitizer_common_interceptors.inc:4101(__interceptor_backtrace.part.0)[0x7f8133460df1]
      mysys/stacktrace.c:213(my_print_stacktrace)[0x56014d6f7a96]
      sql/signal_handler.cc:223(handle_fatal_signal)[0x56014c69f694]
      sigaction.c:0(__restore_rt)[0x7f8132fcc140]
      linux/raise.c:51(__GI_raise)[0x7f8132afdce1]
      stdlib/abort.c:81(__GI_abort)[0x7f8132ae7537]
      sanitizer_common/sanitizer_posix_libcdep.cpp:149(__sanitizer::Abort())[0x7f81334e211b]
      sanitizer_common/sanitizer_termination.cpp:59(__sanitizer::Die())[0x7f81334ecce8]
      asan/asan_report.cpp:186(__asan::ScopedInErrorReport::~ScopedInErrorReport())[0x7f81334cf44c]
      asan/asan_report.cpp:474(__asan::ReportGenericError(unsigned long, unsigned long, unsigned long, unsigned long, bool, unsigned long, unsigned int, bool))[0x7f81334ced47]
      asan/asan_rtl.cpp:117(__asan_report_load1)[0x7f81334cf788]
      strings/ctype-utf8.h:145(my_mb_wc_utf8mb4_quick)[0x56014d7a1564]
      strings/json_lib.c:702(get_first_nonspace)[0x56014d7d5c4b]
      strings/json_lib.c:965(json_read_value)[0x56014d7d7ea3]
      strings/json_lib.c:1991(json_get_object_key)[0x56014d7dc7d8]
      hashicorp_key_management/hashicorp_key_management_plugin.cc:630(get_version(char const*, int, char const*, int*))[0x7f812b5d84b2]
      hashicorp_key_management/hashicorp_key_management_plugin.cc:736(get_latest_version(unsigned int))[0x7f812b5dba6e]
      handler/ha_innodb.cc:11234(create_table_info_t::check_table_options())[0x56014cfd5b3a]
      handler/ha_innodb.cc:11979(create_table_info_t::prepare_create_table(char const*, bool))[0x56014d02244e]
      sql/handler.cc:5431(handler::ha_create(char const*, TABLE*, HA_CREATE_INFO*))[0x56014c6be813]
      sql/handler.cc:5896(ha_create_table(THD*, char const*, char const*, char const*, HA_CREATE_INFO*, st_mysql_const_unsigned_lex_string*, bool))[0x56014c6c0384]
      sql/sql_table.cc:4632(create_table_impl(THD*, st_ddl_log_state*, st_ddl_log_state*, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, st_mysql_const_lex_string const&, DDL_options_st, HA_CREATE_INFO*, Alter_info*, int, bool*, st_key**, unsigned int*, st_mysql_const_unsigned_lex_string*))[0x56014c1abe5e]
      sql/sql_table.cc:4737(mysql_create_table_no_lock(THD*, st_ddl_log_state*, st_ddl_log_state*, st_mysql_const_lex_string const*, st_mysql_const_lex_string const*, Table_specification_st*, Alter_info*, bool*, int, TABLE_LIST*))[0x56014c1acd6b]
      sql/sql_table.cc:4844(mysql_create_table(THD*, TABLE_LIST*, Table_specification_st*, Alter_info*))[0x56014c1ad6ec]
      sql/sql_table.cc:12349(Sql_cmd_create_table_like::execute(THD*))[0x56014c1bec63]
      sql/sql_parse.cc:5988(mysql_execute_command(THD*, bool))[0x56014bf3fd18]
      sql/sql_parse.cc:8044(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x56014bf4ce4b]
      sql/sql_parse.cc:1896(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x56014bf52485]
      sql/sql_parse.cc:1404(do_command(THD*, bool))[0x56014bf57e7e]
      sql/sql_connect.cc:1418(do_handle_one_connection(CONNECT*, bool))[0x56014c31028e]
      sql/sql_connect.cc:1312(handle_one_connection)[0x56014c3107cd]
      perfschema/pfs.cc:2204(pfs_spawn_thread)[0x56014cde597c]
      nptl/pthread_create.c:478(start_thread)[0x7f8132fc0ea7]
      x86_64/clone.S:97(__GI___clone)[0x7f8132bbfdef]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x6290000b9238): create table t1(c1 bigint not null, b char(200)) engine=innodb encrypted=yes encryption_key_id=1
       
      Connection ID (thread ID): 4
      Status: NOT_KILLED
       
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=on,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on,condition_pushdown_for_subquery=on,rowid_filter=on,condition_pushdown_from_having=on,not_null_range_scan=off
       
      The manual page at https://mariadb.com/kb/en/how-to-produce-a-full-stack-trace-for-mysqld/ contains
      information that should help you find out what is causing the crash.
      Writing a core file...
      Working directory at /mnt8t/src/preview-10.9-misc-asan/mysql-test/var/mysqld.1/data
      Resource Limits:
      Limit                     Soft Limit           Hard Limit           Units     
      Max cpu time              unlimited            unlimited            seconds   
      Max file size             unlimited            unlimited            bytes     
      Max data size             unlimited            unlimited            bytes     
      Max stack size            8388608              unlimited            bytes     
      Max core file size        unlimited            unlimited            bytes     
      Max resident set          unlimited            unlimited            bytes     
      Max processes             385901               385901               processes 
      Max open files            1024                 1024                 files     
      Max locked memory         12659513856          12659513856          bytes     
      Max address space         unlimited            unlimited            bytes     
      Max file locks            unlimited            unlimited            locks     
      Max pending signals       385901               385901               signals   
      Max msgqueue size         819200               819200               bytes     
      Max nice priority         0                    0                    
      Max realtime priority     0                    0                    
      Max realtime timeout      unlimited            unlimited            us        
      Core pattern: core
      

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.